[gd_scene load_steps=48 format=3 uid="uid://bbhyhlypr4n38"]

[ext_resource type="Texture2D" uid="uid://dqrddim1i612e" path="res://assets/Boss-Sprites/Vacuum_Boss/enemy-roomba-smamler.png" id="1_gsr6y"]
[ext_resource type="Script" path="res://Scenes/Bosses/Vacuum_Boss/roomba_enemy.gd" id="1_jjob0"]
[ext_resource type="Texture2D" uid="uid://cj03qe5wi4m" path="res://rogue_assets/ball-sheet-sheet.png" id="2_eiopx"]
[ext_resource type="Script" path="res://Scripts/States/State Machine.gd" id="3_4tsn0"]
[ext_resource type="Shader" path="res://rogue_assets/white_flash_sprite.gdshader" id="3_mpkq1"]
[ext_resource type="Script" path="res://Scenes/Bosses/Vacuum_Boss/enemy_state/idle_state.gd" id="4_d54dd"]
[ext_resource type="Texture2D" uid="uid://ci8nvy22gwx2g" path="res://assets/Boss-Sprites/Vacuum_Boss/boom_blue.png" id="4_fwjmx"]
[ext_resource type="Script" path="res://Scenes/Bosses/Vacuum_Boss/enemy_state/chase_state.gd" id="5_i6m1h"]
[ext_resource type="Script" path="res://Scenes/Bosses/Vacuum_Boss/enemy_state/boom_state.gd" id="6_7o1ub"]
[ext_resource type="Texture2D" uid="uid://be4qrnt7ce8bc" path="res://assets/Boss-Sprites/Vacuum_Boss/enemy-roomba-smamler-sheet.png" id="7_kkm7q"]
[ext_resource type="Script" path="res://Scenes/Player/components/move_component.gd" id="7_mllb0"]
[ext_resource type="PackedScene" uid="uid://cgn1vws1x6sp4" path="res://Scenes/Bosses/Vacuum_Boss/roomba_explosion.tscn" id="11_faeu5"]
[ext_resource type="Script" path="res://Scenes/Bosses/Vacuum_Boss/enemy_state/dead_state.gd" id="11_p2lww"]
[ext_resource type="PackedScene" uid="uid://bowvrvbt7us8p" path="res://Scenes/Components/health_component.tscn" id="12_g385t"]
[ext_resource type="PackedScene" uid="uid://cbe5ubp1ochyn" path="res://Scenes/Components/hitbox_component.tscn" id="13_pygh3"]
[ext_resource type="PackedScene" uid="uid://bbnsgdhlwu3e5" path="res://Scenes/GUI/Enemy_Health_Bar/healthbar.tscn" id="16_56a8q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wld3r"]
resource_local_to_scene = true
shader = ExtResource("3_mpkq1")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kc05"]
atlas = ExtResource("4_fwjmx")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fcws"]
atlas = ExtResource("4_fwjmx")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbte5"]
atlas = ExtResource("4_fwjmx")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eg2cm"]
atlas = ExtResource("4_fwjmx")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu78e"]
atlas = ExtResource("4_fwjmx")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1xui"]
atlas = ExtResource("4_fwjmx")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3wnt"]
atlas = ExtResource("4_fwjmx")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_spda5"]
atlas = ExtResource("4_fwjmx")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_itrwj"]
atlas = ExtResource("4_fwjmx")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_73hkh"]
atlas = ExtResource("4_fwjmx")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h1at"]
atlas = ExtResource("4_fwjmx")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0jj2"]
atlas = ExtResource("4_fwjmx")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd4m8"]
atlas = ExtResource("1_gsr6y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_757ki"]
atlas = ExtResource("1_gsr6y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdc7y"]
atlas = ExtResource("1_gsr6y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ixuu"]
atlas = ExtResource("1_gsr6y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbcpi"]
atlas = ExtResource("7_kkm7q")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4e8v"]
atlas = ExtResource("1_gsr6y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_28gye"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kc05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fcws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbte5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eg2cm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu78e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1xui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3wnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spda5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itrwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73hkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h1at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0jj2")
}],
"loop": false,
"name": &"boom_blue",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd4m8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_757ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdc7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ixuu")
}],
"loop": true,
"name": &"chase",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbcpi")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4e8v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_vlpyu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("player_chase_detect/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("player_boom_detect/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ih22a"]
resource_name = "boom"
length = 0.600005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"boom_blue"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.45, 0.55),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("roomba_explosion:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [10.0],
"method": &"boom"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("player_boom_hurt/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.35, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_vjb2d"]
resource_name = "chase"
length = 0.666683
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"chase"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 3, 2, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8572b"]
resource_name = "dead"
length = 0.10001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.521569)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("state_machine/chase_state")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"dead"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("player_chase_detect/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0pdpe"]
resource_name = "idle"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ball-sheet-sheet:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3oqjo"]
_data = {
"RESET": SubResource("Animation_vlpyu"),
"boom": SubResource("Animation_ih22a"),
"chase": SubResource("Animation_vjb2d"),
"dead": SubResource("Animation_8572b"),
"idle": SubResource("Animation_0pdpe")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xr2nf"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_gnvhh"]
radius = 352.006

[sub_resource type="CircleShape2D" id="CircleShape2D_yb018"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pq5be"]
radius = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0slee"]
radius = 39.0128

[node name="roomba_enemy" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 3
script = ExtResource("1_jjob0")

[node name="Ball-sheet-sheet" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.403922)
visibility_layer = 2
z_index = -1
position = Vector2(0, -8)
scale = Vector2(1.21094, 0.721517)
texture = ExtResource("2_eiopx")

[node name="roomba_explosion" parent="." instance=ExtResource("11_faeu5")]
position = Vector2(0, -6)
amount = 50
lifetime = 0.75
speed_scale = 1.75
scale_amount_min = 8.0
scale_amount_max = 16.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_wld3r")
position = Vector2(0, -10)
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_28gye")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3oqjo")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_xr2nf")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_4tsn0")
starting_state = NodePath("idle_state")

[node name="idle_state" type="Node" parent="state_machine" node_paths=PackedStringArray("chase_state")]
script = ExtResource("4_d54dd")
chase_state = NodePath("../chase_state")
animation_name = "idle"

[node name="chase_state" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "boom_state")]
script = ExtResource("5_i6m1h")
idle_state = NodePath("../idle_state")
boom_state = NodePath("../boom_state")
animation_name = "chase"

[node name="boom_state" type="Node" parent="state_machine" node_paths=PackedStringArray("dead_state")]
script = ExtResource("6_7o1ub")
dead_state = NodePath("../dead_state")

[node name="dead_state" type="Node" parent="state_machine"]
script = ExtResource("11_p2lww")
animation_name = "dead"

[node name="move_component" type="Node" parent="."]
script = ExtResource("7_mllb0")

[node name="player_chase_detect" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_chase_detect"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_gnvhh")

[node name="player_boom_detect" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_boom_detect"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_yb018")

[node name="player_boom_hurt" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_boom_hurt"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_pq5be")
disabled = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("dead_state") instance=ExtResource("12_g385t")]
position = Vector2(0, -29)
MAX_HEALTH = 12
dead_state = NodePath("../state_machine/dead_state")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("13_pygh3")]
visible = false
position = Vector2(1, -5)
collision_layer = 2
collision_mask = 3
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_0slee")

[node name="healthbar" parent="." instance=ExtResource("16_56a8q")]
offset_left = -14.0
offset_top = 4.0
offset_right = 14.0
offset_bottom = 7.0

[connection signal="area_entered" from="player_chase_detect" to="state_machine/idle_state" method="_on_player_chase_detect_area_entered"]
[connection signal="area_entered" from="player_boom_detect" to="state_machine/chase_state" method="_on_player_boom_detect_area_entered"]
[connection signal="area_entered" from="player_boom_hurt" to="state_machine/boom_state" method="_on_player_boom_hurt_area_entered"]
